@startuml

package genetic <<Folder>> {
    class GeneticAlgorithm {
        int numberOfIterations
        InitialPopulationGenerator initialGenerator
        NewPopulationGenerator populationGenerator
        FitnessFunction fitnessFunction
        + Chromosome run()
    }

    class NewPopulationGenerator {
        GeneticSelector geneticSelector
        MutationCoordinator mutationCoordinator
        CrossoverCoordinator crossoverCoordinator
        + List<Chromosome> generateNewPopulation(List<Chromosome>)
    }

    GeneticAlgorithm o--- NewPopulationGenerator

}

package gui <<Folder>> {
    class MainController {
        List<StatisticalFeatureModel> statData
        List<RuleFeatureModel> ruleData
        GeneticAlgorithmConfigurationModel configurationModel
        + void runAlgorithm()
        + void analyseFile()
    }
}

package music <<Folder>> {

    class Reader {
        + String analyseMidiFile(String, MusicalFitnessFunction)
    }

    class FeatureContainer <T extends MelodicFeature> {
        List<T> featureList;
        RewardCalculator<T> rewardCalculator;
        + int calculateReward(List<Note>)
        + String createFitnessReport(List<Note>)
        + String createAnalysisReport(List<Note>)
    }
}

music -- genetic
gui ---> genetic
gui ---> music

@enduml